nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
    - port: 80
      targetPort: 80
#      nodePort: 30101
      protocol: TCP
  selector:
    app: nginx
  type: NodePort
